2.0.0 Fixed loading indicator not visibly rotating if primary color and border color have the same value.

--- a/style.css
+++ b/style.css
@@ -1143,6 +1143,10 @@ ul.social-icons li {
 	border-top-color: currentColor;
 }
 
+#pagination .loader.same-primary-border-color {
+	border-top-color: #fff;
+}
+
 
 /* Animations ------------------------------- */
 
